<resources>
    <string name="_1">手机1：</string>
    <string name="_1_4">1/4</string>
    <string name="_2">手机2：</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_bri">关于 Bri 体验科技</string>
    <string name="about_us">关于最美应用</string>
    <string name="action_feedback">意见反馈</string>
    <string name="action_settings">Settings</string>
    <string name="activate">激活</string>
    <string name="activation_code">激活码：</string>
    <string name="activies">活动</string>
    <string name="add_picture">添加截图</string>
    <string name="add_tag">添加话题</string>
    <string name="album">相册</string>
    <string name="alert">举报</string>
    <string name="alert_confirm">确认是否举报该内容</string>
    <string name="alert_failure">举报失败</string>
    <string name="alert_success">举报成功</string>
    <string name="alerted">已举报</string>
    <string name="android_download">原生游戏</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="ap_hint">主机创建本地对战，附近玩家加入即可</string>
    <string name="apk_download">模拟器游戏</string>
    <string name="app_category">精选分类</string>
    <string name="app_downloading">应用正在后台下载</string>
    <string name="app_icon_tip">app_icon</string>
    <string name="app_name">悟饭游戏厅</string>
    <string name="app_prom">推广</string>
    <string name="app_prom_why">为什么有推广</string>
    <string name="app_size">应用大小：{0}</string>
    <string name="app_title">应用名称</string>
    <string name="app_topic">专题推荐</string>
    <string name="app_upgrade">立刻升级</string>
    <string name="app_upgrade_download_fail">新版本下载失败，请稍后再试.</string>
    <string name="app_upgrade_download_sucess">新版本下载成功,开始安装.</string>
    <string name="app_ver_too_high">此应用还不支持你的系统版本哦~</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply_auth_code">申请邀请码</string>
    <string name="apply_auth_code_pass">邀请码审核通过啦</string>
    <string name="apply_auth_code_prompt">还没有邀请码？找小美要一个！</string>
    <string name="apply_success">成功啦，等待小美给码</string>
    <string name="archive_compatible_toast_info">*我们在新版插件中提升了对战体验，但遗憾的是该插件不再兼容老的对战存档，敬请谅解！</string>
    <string name="audio">音频</string>
    <string name="auth_code">邀请码</string>
    <string name="auth_code_be_used">邀请码已被使用</string>
    <string name="auth_code_hint">输入邀请码</string>
    <string name="auth_code_prompt">正在内测中，需要邀请才能发布内容哦！</string>
    <string name="auth_code_prompt_pass">恭喜你获得邀请码，点击激活吧!</string>
    <string name="auth_code_wrong">邀请码有误</string>
    <string name="auth_fail">授权失败，请重试…</string>
    <string name="auth_success">验证成功</string>
    <string name="auto_login_when_net">联网时自动登录</string>
    <string name="back">返回</string>
    <string name="bad_disc_message">"The file you selected wasn't recognized as a game."</string>
    <string name="bad_disc_title">Unsupported disc</string>
    <string name="bluetooth_accpet_game">我要接收游戏</string>
    <string name="bluetooth_come">让小伙伴赶紧安装接收到的悟饭游戏厅吧</string>
    <string name="bluetooth_continue">继续蓝牙传输游戏</string>
    <string name="bluetooth_end">终止传输</string>
    <string name="bluetooth_hurry">请赶紧安装接收到的悟饭游戏厅吧</string>
    <string name="bluetooth_introduce">让小伙伴，赶紧安装接收到的悟饭APP吧！安装完悟饭APP后，需继续安装插件和游戏才能开始开战哦！</string>
    <string name="bluetooth_net">蓝牙网络</string>
    <string name="bluetooth_package">悟饭游戏厅APP安装包</string>
    <string name="bluetooth_papa">等待传输</string>
    <string name="bluetooth_search">搜索设备</string>
    <string name="bluetooth_send_app">发送悟饭游戏厅APP</string>
    <string name="bluetooth_send_game">我要发送游戏</string>
    <string name="bluetooth_send_info">小伙伴先安装悟饭游戏厅APP，才能接收你发送的游戏</string>
    <string name="bluetooth_start">开始传输</string>
    <string name="bluetooth_step">安装步骤：</string>
    <string name="bluetooth_step1">先安装悟饭游戏厅APP</string>
    <string name="bluetooth_step2">再安装悟饭游戏厅相关插件</string>
    <string name="bluetooth_step3">安装完成，开始联机对战</string>
    <string name="bluetooth_wait">等待小伙伴发送游戏</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bri_email">hr@zuimeia.com</string>
    <string name="bri_website">http://brixd.com/about-mobile.html</string>
    <string name="brvah_load_end">亲，到底了</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="btn_agree">同意</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_close">关闭</string>
    <string name="btn_face_transfer_build_qr_code">创建二维码</string>
    <string name="btn_face_transfer_scan_qr_code">扫描二维码</string>
    <string name="btn_pic_photo">从手机相册选择</string>
    <string name="btn_refuse">拒绝</string>
    <string name="btn_return">返回</string>
    <string name="btn_return_home">返回首页</string>
    <string name="btn_save">保存</string>
    <string name="btn_sure">确定</string>
    <string name="btn_take_photo">拍照</string>
    <string name="can_not_find_version_name">未找到当前版本号：</string>
    <string name="cancel">取消</string>
    <string name="cancel_confirm">您确定要退出吗?</string>
    <string name="category_character">个性分类</string>
    <string name="category_game">游戏分类</string>
    <string name="cdk_expired_date">有效期：%1$s</string>
    <string name="cdk_propotion">%1$s</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="cheating">金手指</string>
    <string name="chip_text">Chip text</string>
    <string name="choice_order_date">预计上线时间：%1$s</string>
    <string name="choose_game_num">已选择%1$d款游戏</string>
    <string name="classify_fc">FC</string>
    <string name="classify_gba">GBA</string>
    <string name="classify_jg">街机</string>
    <string name="clear_history">清空搜索历史</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_twice_quit">再按一次退出</string>
    <string name="comment">评论</string>
    <string name="comment_create_hint">"在此开始填写点评内容
-请填写3~800个字
-可说明游戏的优点、缺点
-经常产出优质点评的用户，会获得悟饭鉴赏家称号
-无营养的点评会被删除"</string>
    <string name="comment_failure">评论失败，请重试</string>
    <string name="comment_hint">你的评论有机会展示到首页卡片上哦！</string>
    <string name="comment_item_content_1">%1$s : %2$s</string>
    <string name="comment_item_content_2">%1$s回复%2$s : %3$s</string>
    <string name="comment_item_content_more">查看更多%1$d条回复...</string>
    <string name="comment_item_floor">第%1$d楼</string>
    <string name="comment_item_floor_1st">沙发</string>
    <string name="comment_item_floor_2nd">板凳</string>
    <string name="comment_login_tx">请登录后再发表内容</string>
    <string name="comment_nav_title">写评论</string>
    <string name="comment_null">评论不能为空！</string>
    <string name="comment_replay_hint">请输入评论</string>
    <string name="comment_share_hint">同时分享到微博</string>
    <string name="comment_success">评论成功</string>
    <string name="comment_too_short">评论要多于5个字，再写点</string>
    <string name="comment_toolbar_hint">写下你的评论吧！</string>
    <string name="comment_toolbar_title">写评论</string>
    <string name="commit">发布</string>
    <string name="community">发现应用</string>
    <string name="community_app_delete_confirm">确定要删除该内容？</string>
    <string name="community_app_ranking">排行</string>
    <string name="community_hot">热门</string>
    <string name="community_new">最新</string>
    <string name="community_request_failure">失败了，再试试</string>
    <string name="community_test">内测</string>
    <string name="community_user_ranking">美友</string>
    <string name="confirm">确定</string>
    <string name="connect_server_error_hint">"请确认与主机连接至同一WIFI,
并输入正确的主机IP。"</string>
    <string name="connect_server_error_title">主机($1)连接失败!</string>
    <string name="connect_server_excption">连接失败</string>
    <string name="context_menu_alert">举 报</string>
    <string name="context_menu_delete">删 除</string>
    <string name="continue_download">自动完成未完成的下载</string>
    <string name="continue_when_wifi">仅在使用WIFI时续传</string>
    <string name="copied">已复制到剪贴板</string>
    <string name="cube_ptr_hours_ago"> hours ago</string>
    <string name="cube_ptr_last_update">last update: </string>
    <string name="cube_ptr_minutes_ago"> minutes ago</string>
    <string name="cube_ptr_pull_down">Pull Down</string>
    <string name="cube_ptr_pull_down_to_refresh">Pull Down to Refresh</string>
    <string name="cube_ptr_refresh_complete">Updated.</string>
    <string name="cube_ptr_refreshing">Updating...</string>
    <string name="cube_ptr_release_to_refresh">Release To Refresh</string>
    <string name="cube_ptr_seconds_ago"> seconds ago</string>
    <string name="cut_title">图片裁剪</string>
    <string name="daily_niceapp">每日最美</string>
    <string name="forum">专区</string>
    <string name="performance">性能</string>
    <string name="slot">存档</string>
    <string name="stick_keys">摇杆与按键</string>
</resources>