<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/guide" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.14" />
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="@dimen/wdp256" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/guide">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_menu_left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginStart="@dimen/wdp18">
            <com.papa91.arc.widget.view.MImageView android:id="@id/fCheating" android:layout_width="@dimen/wdp80" android:layout_height="@dimen/wdp80" android:layout_marginBottom="@dimen/wdp8" app:placeholderImage="@drawable/f_cheating" app:placeholderImageScaleType="fitCenter" />
            <com.papa91.arc.widget.view.MImageView android:id="@id/fScreenShot" android:layout_width="@dimen/wdp80" android:layout_height="@dimen/wdp80" android:layout_marginBottom="@dimen/wdp8" app:placeholderImage="@drawable/f_screen_shot" app:placeholderImageScaleType="fitCenter" app:roundAsCircle="true" />
            <com.papa91.arc.widget.view.MImageView android:id="@id/fHide" android:layout_width="@dimen/wdp80" android:layout_height="@dimen/wdp80" app:layout_goneMarginTop="@dimen/wdp48" app:placeholderImage="@drawable/f_hide" app:placeholderImageScaleType="fitCenter" />
        </LinearLayout>
        <com.papa91.arc.widget.view.MImageView android:id="@id/fShow" android:visibility="gone" android:layout_width="@dimen/wdp36" android:layout_height="@dimen/wdp72" android:layout_centerVertical="true" app:placeholderImage="@drawable/f_hide_float" app:placeholderImageScaleType="fitCenter" />
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_menu_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="@dimen/wdp18" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/guide">
        <com.papa91.arc.widget.view.MImageView android:id="@id/fOneKey" android:layout_width="@dimen/wdp80" android:layout_height="@dimen/wdp80" android:layout_marginBottom="@dimen/wdp8" app:placeholderImage="@drawable/f_one_key" app:placeholderImageScaleType="fitXY" />
        <com.papa91.arc.widget.view.MImageView android:id="@id/fGate" android:layout_width="@dimen/wdp80" android:layout_height="@dimen/wdp80" android:layout_marginBottom="@dimen/wdp8" app:placeholderImage="@drawable/f_gate" app:placeholderImageScaleType="fitXY" />
        <com.papa91.arc.widget.view.MImageView android:id="@id/fQuickSlot" android:layout_width="@dimen/wdp80" android:layout_height="@dimen/wdp80" app:placeholderImage="@drawable/f_slot" app:placeholderImageScaleType="fitCenter" />
    </LinearLayout>
    <View android:id="@id/menuBarOutSide" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintBottom_toTopOf="@id/menuBar" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.0" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/menuBar" android:background="@drawable/bg_on_pause" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/constraintLayout5" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@id/constraintLayout4" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_percent="0.65">
            <ImageView android:id="@id/exit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/menu_margin" android:src="@drawable/exit" android:scaleType="fitXY" app:layout_constraintDimensionRatio="W,82:93" app:layout_constraintHorizontal_chainStyle="spread" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/reload" app:layout_constraintTop_toTopOf="parent" />
            <ImageView android:id="@id/reload" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/menu_space" android:layout_marginTop="@dimen/menu_margin" android:src="@drawable/reload" android:scaleType="fitXY" app:layout_constraintDimensionRatio="W,82:93" app:layout_constraintLeft_toRightOf="@id/exit" app:layout_constraintRight_toLeftOf="@id/voice" app:layout_constraintTop_toTopOf="parent" />
            <ImageView android:id="@id/voice" android:background="@drawable/voice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/menu_space" android:layout_marginTop="@dimen/menu_margin" android:scaleType="fitXY" app:layout_constraintDimensionRatio="W,82:93" app:layout_constraintLeft_toRightOf="@id/reload" app:layout_constraintRight_toLeftOf="@id/changeDisk" app:layout_constraintTop_toTopOf="parent" />
            <ImageView android:id="@id/changeDisk" android:background="@drawable/change_disk" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/menu_space" android:layout_marginTop="@dimen/menu_margin" android:scaleType="fitXY" app:layout_constraintDimensionRatio="W,82:93" app:layout_constraintLeft_toRightOf="@id/voice" app:layout_constraintRight_toLeftOf="@id/vibrate" app:layout_constraintTop_toTopOf="parent" />
            <ImageView android:id="@id/vibrate" android:background="@drawable/vibrate_off" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/menu_space" android:layout_marginTop="@dimen/menu_margin" android:scaleType="fitXY" app:layout_constraintDimensionRatio="W,82:93" app:layout_constraintLeft_toRightOf="@id/changeDisk" app:layout_constraintRight_toLeftOf="@id/quickSlot" app:layout_constraintTop_toTopOf="parent" />
            <ImageView android:id="@id/quickSlot" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/menu_space" android:layout_marginTop="@dimen/menu_margin" android:src="@drawable/quick_slot" android:scaleType="fitXY" app:layout_constraintDimensionRatio="W,82:93" app:layout_constraintLeft_toRightOf="@id/vibrate" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/constraintLayout4" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/menu_margin" android:layout_marginBottom="@dimen/menu_margin" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/constraintLayout5" app:layout_constraintWidth_percent="0.864">
            <TextView android:textSize="12.0sp" android:textColor="#ffc3c3c3" android:gravity="center" android:id="@id/forum" android:background="@drawable/shape_menu_button" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/forum" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="h,210:52" app:layout_constraintEnd_toStartOf="@id/slot" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toLeftOf="@id/slot" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="12.0sp" android:textColor="#ffc3c3c3" android:gravity="center" android:id="@id/slot" android:background="@drawable/shape_menu_button" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/menu_space1" android:text="@string/slot" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="h,210:52" app:layout_constraintLeft_toRightOf="@id/forum" app:layout_constraintRight_toLeftOf="@id/cheating" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="12.0sp" android:textColor="#ffc3c3c3" android:gravity="center" android:id="@id/cheating" android:background="@drawable/shape_menu_button" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/menu_space1" android:text="@string/cheating" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="h,210:52" app:layout_constraintLeft_toRightOf="@id/slot" app:layout_constraintRight_toLeftOf="@id/performance" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="12.0sp" android:textColor="#ffc3c3c3" android:gravity="center" android:id="@id/performance" android:background="@drawable/shape_menu_button" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/menu_space1" android:text="@string/performance" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="h,210:52" app:layout_constraintLeft_toRightOf="@id/cheating" app:layout_constraintRight_toLeftOf="@id/stickKeys" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="12.0sp" android:textColor="#ffc3c3c3" android:gravity="center" android:id="@id/stickKeys" android:background="@drawable/shape_menu_button" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginLeft="@dimen/menu_space1" android:text="@string/stick_keys" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="h,210:52" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintLeft_toRightOf="@id/performance" app:layout_constraintRight_toLeftOf="parent" app:layout_constraintStart_toEndOf="@id/performance" app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <View android:id="@id/resume" android:layout_width="@dimen/wdp90" android:layout_height="@dimen/wdp30" app:layout_constraintEnd_toEndOf="@id/menuBar" app:layout_constraintStart_toStartOf="@id/menuBar" app:layout_constraintTop_toTopOf="@id/menuBar" />
    <ImageView android:id="@id/pauseBar" android:layout_width="fill_parent" android:layout_height="@dimen/wdp36" android:src="@drawable/bg_on_resume" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <View android:id="@id/pause" android:visibility="gone" android:layout_width="@dimen/wdp90" android:layout_height="@dimen/wdp30" app:layout_constraintBottom_toBottomOf="@id/pauseBar" app:layout_constraintEnd_toEndOf="@id/pauseBar" app:layout_constraintStart_toStartOf="@id/pauseBar" app:layout_constraintTop_toTopOf="@id/pauseBar" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/timerContainer" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/timerBg" android:background="@drawable/shape_time_count_bg" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="@dimen/wdp27" android:layout_marginTop="@dimen/wdp18" android:layout_marginRight="@dimen/wdp10" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="206:54" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="@dimen/wdp26" android:textColor="#ffffffff" android:gravity="center" android:id="@id/timer" android:background="@drawable/shape_time_count_bg" android:paddingLeft="@dimen/wdp10" android:paddingTop="@dimen/wdp4" android:paddingRight="@dimen/wdp10" android:paddingBottom="@dimen/wdp4" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/wdp20" android:layout_marginRight="@dimen/wdp20" android:text="0 进入广告" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/alert" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" app:layout_constraintStart_toStartOf="@id/timerBg" app:layout_constraintTop_toTopOf="@id/timerBg" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_play_time" android:background="@drawable/bg_simulator_timer_1" android:visibility="gone" android:layout_width="@dimen/wdp158" android:layout_height="wrap_content" android:layout_marginTop="@dimen/wdp20" android:layout_marginRight="@dimen/wdp72" android:minHeight="@dimen/wdp49" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent">
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/wdp49">
            <ImageView android:id="@id/iv_timer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wdp12" android:src="@drawable/ic_simulator_timer" />
            <TextView android:textSize="@dimen/wdp24" android:textColor="#ffffffff" android:id="@id/tv_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/wdp13" android:text="00:00:00" />
        </LinearLayout>
        <View android:id="@id/v_line" android:background="#1fffffff" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/wdp1" />
        <TextView android:textSize="@dimen/wdp24" android:textColor="#ff6f7989" android:gravity="center" android:id="@id/tv_game_pass" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/wdp42" android:text="通关" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>